# onnx-model-surgery

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_surgery.py
onnx_surgery/: __init__.py
onnx_surgery/cli/: main.py
onnx_surgery/core/: __init__.py  graph.py  model_loader.py  visualization.py
onnx_surgery/tools/: __init__.py  diff.py  diff_report.py  export.py  extract.py  flops.py  inspect.py  patch.py  prune.py  quantize.py  report.py  simplify.py
tests/: test_core.py
