[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-model-surgery"
version = "0.2.0"
description = "Visual ONNX model inspection, pruning, patching, quantization, and optimization toolkit. 15+ CLI commands for production model surgery."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Luv-Goel"},
]
keywords = ["onnx", "machine-learning", "deep-learning", "model-optimization", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "onnx>=1.15",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
viz = [
    "graphviz>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]
quant = [
    "onnxruntime>=1.16",
]

[project.urls]
Homepage = "https://github.com/Luv-Goel/onnx-model-surgery"
Repository = "https://github.com/Luv-Goel/onnx-model-surgery"
"Bug Tracker" = "https://github.com/Luv-Goel/onnx-model-surgery/issues"

[project.scripts]
onnx-surgery = "onnx_surgery.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
